<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.polimi.jaj.roarify.fragment.FeedbackFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="40dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_logo"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/app_feedback"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="#000"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/authors_feedback"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="#000"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:textStyle="bold"
                android:textColor="#000"
                android:textSize="14sp"
                android:text="@string/mail_feedback"/>

            <Button
                android:id="@+id/button_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/mail_button_feedback"
                android:onClick="sendMail"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:textStyle="bold"
                android:textColor="#000"
                android:textSize="14sp"
                android:text="@string/tutorial_feedback"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="30dp"
                android:textSize="14sp"
                android:textColor="#000"
                android:text="@string/tutorial1_feedback"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="30dp"
                android:textSize="14sp"
                android:textColor="#000"
                android:text="@string/tutorial2_feedback"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="30dp"
                android:textSize="14sp"
                android:textColor="#000"
                android:text="@string/tutorial3_feedback"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="30dp"
                android:textSize="14sp"
                android:textColor="#000"
                android:text="@string/tutorial4_feedback"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="30dp"
                android:textSize="14sp"
                android:textColor="#000"
                android:text="@string/tutorial5_feedback"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="30dp"
                android:textSize="14sp"
                android:textColor="#000"
                android:text="@string/tutorial6_feedback"/>

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="30dp"
            android:textSize="14sp"
            android:textColor="#000"
            android:text="@string/tutorial7_feedback"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="45dp"
                android:textSize="14sp"
                android:textColor="#000"
                android:text="@string/tutorial7_1_feedback"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="45dp"
                android:textSize="14sp"
                android:textColor="#000"
                android:text="@string/tutorial7_2_feedback"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="45dp"
                android:textSize="14sp"
                android:textColor="#000"
                android:text="@string/tutorial7_3_feedback"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="45dp"
                android:textSize="14sp"
                android:textColor="#000"
                android:text="@string/tutorial7_4_feedback"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="45dp"
                android:layout_marginBottom="15dp"
                android:textSize="14sp"
                android:textColor="#000"
                android:text="@string/tutorial7_5_feedback"/>
        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context="com.polimi.jaj.roarify.activity.HomeActivity"/>

</FrameLayout>
